# src/models/index.ts
@@ -7,3 +7,4 @@ export * from "./trainer.repository";
 export * from "./class.repository";
 export * from "./reports.repository";
 export * from "./logs.repository";
+export * from "./member-dashboard.repository";
